Fix bug 367469 - ICS x-property should allow VALUE=type parameter (.value throws exception if present). r=dbo